--- a/index.html
+++ b/index.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dashboard Power BI</title>
+    <title>Dashboard Power BI - LOSGRUXES</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background: #f8f9fa;
+            font-family: Arial, sans-serif;
+            background: #f0f2f5;
             margin: 0;
             padding: 20px;
-            color: #333;
         }
-        .header {
-            background: #2c3e50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            border-radius: 5px;
-            margin-bottom: 30px;
-        }
-        .dashboard-container {
-            width: 95%;
-            max-width: 1200px;
+        .container {
+            max-width: 900px;
             margin: 0 auto;
             background: white;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         h1 {
-            margin: 0;
-            font-size: 28px;
-        }
-        .footer {
+            color: #2c3e50;
             text-align: center;
-            margin-top: 30px;
-            color: #7f8c8d;
-            font-size: 14px;
         }
-   <!DOCTYPE html>
-<html>
-<head>
-    <title>Dashboard Power BI - LOSGRUXES</title>
+    </style>
 </head>
 <body>
-    <h1>¡Página lista para Power BI!</h1>
-    <p>Sube tus dashboards en HTML o PDF.</p>
+    <div class="container">
+        <h1>REPORTE DE DATOS INTERACTIVO</h1>
+        
+        <!-- PEGA AQUÍ TU IFRAME DE POWER BI -->
+        <iframe 
+            title="🇪🇨 COUNTRY DASHBOARD" 
+            width="100%" 
+            height="600px" 
+            src="https://app.powerbi.com/view?r=eyJrIjoiNjkwNmI4MDAtYTcwNS00Mzk1LWE1ZGUtOTA0ZDUyNzUzZjAyIiwidCI6ImY0NzVlOGU2LTg5MjYtNDcyMi1iNTdiLTI4NWMyODdiNGU5YSJ9" 
+            frameborder="0" 
+            allowfullscreen>
+        </iframe>
+        
+        <p style="text-align: center; color: #7f8c8d;">
+            © 2023 - LOSGRUXES. Todos los derechos reservados.
+        </p>
+    </div>
 </body>
 </html>
